--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,19 @@
   --sub-color: #676e8a;
   --sub-alt-color: #1e1d2f;
   --error-color: #ff5869;
+  --nav-height: 70px;
 }
 
 /* Custom font */
 @font-face {
   font-family: Yellowtail;
   src: url('./assets/font/Yellowtail-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Book.ttf');
   font-weight: 400;
 }
 
@@ -61,28 +68,6 @@ html, body {
   box-shadow: 0px 2px 0px var(--sub-color);
 }
 
-/* This is for styling the text */
-
-.style-text-main-color {
-  color: var(--main-color) !important;
-}
-
-.style-text-caret-color {
-  color: var(--caret-color) !important;
-}
-
-.style-text-sub-color {
-  color: var(--sub-color) !important;
-}
-
-.style-text-sub-alt-color {
-  color: var(--sub-alt-color) !important;
-}
-
-.style-text-text-color {
-  color: var(--text-color) !important;
-}
-
 /* NAVBAR */
 
 #my-navbar {
@@ -105,3 +90,22 @@ html, body {
 #logo-font {
   font-family: 'Yellowtail', sans-serif !important;
 }
+
+#home {
+  margin-top: var(--nav-height);
+}
+
+.carousel {
+  min-height: 80vh;
+}
+
+.carousel-item {
+  min-height: 80vh;
+  background-size: cover;
+  background-position: center;
+}
+
+/* .carousel-image {
+  filter: brightness(30%);
+} */
+
